# pib.OS

./: Cargo.toml  README.md
benches/: core_bench.rs
docs/: advanced_features_concept.md  network_bridges.md  oakd_face_tracking_concept.md
src/: api.rs  entity.rs  lib.rs  main.rs  mock_nodes.rs  network.rs  parser.rs  zenoh_backend.rs  zenoh_test.rs
ui/: README.md  index.html  package-lock.json  package.json
ui/playwright-report/: index.html
ui/src/: App.tsx  features.test.ts  features.ts  treeExporter.test.ts  treeExporter.ts
ui/src/hooks/: useNodeRegistry.test.ts  useNodeRegistry.ts  useTelemetry.test.ts  useTelemetry.ts
ui/tests/: advanced.spec.ts  app.spec.ts
